# nexusagent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_REMEDIATION_REPORT.md  Makefile  OPERATIONS.md  README.md  RELEASE_NOTES_v1.0.0.md  docker-compose.aws.tls.yml  docker-compose.aws.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.production.example  pyproject.toml  railway.toml  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: backend-ci.yml  deploy.yml  docker-validation.yml  frontend-ci.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_rls_policies.py  003_reconcile_orm_schema.py  004_document_chunk_embedding.py  005_reconcile_models.py  005_reconcile_models_to_migrations.py  006_long_term_memory.py  007_knowledge_base_unique_name.py  008_reconcile_schema_drift.py  009_milestone_b.py
backend/app/: main.py
backend/app/core/: auth_dependencies.py  build_info.py  config.py  database.py  dependencies.py  exceptions.py  health.py  logging.py  metrics.py  middleware.py  observability_middleware.py  rate_limit.py  redis.py  security.py
backend/app/models/: all_models.py  base.py  organization.py  user.py
backend/app/repositories/: base_repository.py  tenant_repository.py
backend/app/schemas/: agent.py  audit.py  auth.py  conversation.py  document.py  knowledge_base.py  notification.py  orchestrator.py  organization.py  provider.py  rag.py  routing.py  tool.py  webhook.py
backend/app/services/: agent_orchestrator.py  audit.py  background_tasks.py  conversation_memory.py  email.py  embeddings.py  function_calling.py  ingestion.py  long_term_memory.py  memory_consolidation.py  memory_ranking.py  multi_agent_router.py  notifications.py  rag.py  semantic_memory.py  tenant_context.py  tool_executor.py  tool_registry.py  usage.py
backend/scripts/: seed_demo.py
backend/tests/: test_agent_api.py  test_agent_orchestrator.py  test_api_keys.py  test_auth_dependencies.py  test_change_password.py  test_chat_rag.py  test_config_validation.py  test_conversation_api.py  test_conversation_memory.py  test_document_api.py  test_document_embeddings.py  test_document_ingestion.py  test_function_calling.py  test_knowledge_base_api.py  test_long_term_memory.py  test_memory_consolidation.py  test_memory_ranking.py  test_milestone1.py  test_multi_agent_router.py  test_phase4_ops.py  test_provider_factory.py  test_rag_query.py  test_rate_limit.py  test_registration.py  test_semantic_memory.py  test_summary_engine.py  test_tenant_isolation.py  test_tool_api.py  test_tool_execution.py  test_tool_executor.py  test_tool_registry.py
brand/: BRAND_GUIDE.md
demo/: DEMO_VIDEO_SCRIPT.md  generate_demo_pdfs.py
deploy/: README.md  backup.sh  compose.sh  db-migrate.sh  fetch-secrets.sh  healthcheck.sh  iam-policy.json  init-deploy.sh  init-letsencrypt.sh  nexusagent.service  render-nginx.sh  renew-cert.sh  restore.sh  rolling-restart.sh  setup-cron.sh  update-containers.sh  user-data.sh
deploy/loadtest/: loadtest.py
deploy/screenshots/: capture.py
docs/: BETA_READINESS.md  DEPLOYMENT_GUIDE.md  FAQ.md  GA_CHECKLIST.md  PERFORMANCE.md  PRODUCTION_CHECKLIST.md  RELEASE.md
docs/deployment/: PRODUCTION_CHECKLIST.md  ROLLBACK.md  aws-iam.md  aws-secrets.md  aws.md  backups.md  docker.md  github-actions.md  observability.md  production.md  rate-limiting.md  secrets.md  security-checklist.md  security-headers.md  security-scanning.md  tls.md
docs/reports/: BACKUP_AND_RECOVERY.md  MILESTONE_A_GA_REPORT.md  MILESTONE_C_AUDIT.md  MILESTONE_C_IMPLEMENTATION_PLAN.md  ORM_MIGRATION_MATRIX.md  PHASE_2B_COMPLETION.md  PHASE_3C_REPORT.md  PHASE_3_REMAINING_WORK.md  PHASE_4_AUDIT.md  PHASE_4_REPORT.md  PHASE_4_SECURITY_REVIEW.md  PHASE_5_DEPLOYMENT_PLAN.md  PHASE_5_LOAD_TEST.md  PHASE_5_REPORT.md  PHASE_5_SECURITY_REPORT.md  PHASE_6_API_READINESS.md  PHASE_6_DOCUMENTATION_REVIEW.md  PHASE_6_E2E_VALIDATION.md  PHASE_6_RELEASE_AUDIT.md  PHASE_6_REPORT.md  PHASE_6_SAMPLE_CONTENT.md
docs/user-guide/: README.md  agents.md  api-examples.md  chat-and-memory.md  demo.md  knowledge-bases.md  quickstart.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts  template.tsx
frontend/app/agents/: layout.tsx  loading.tsx  page.tsx
frontend/app/book-demo/: book-demo-form.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/contact/: contact-form.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/knowledge-bases/: layout.tsx  loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/components/analytics/: route-tracker.tsx
frontend/hooks/: use-agents.ts  use-auth.ts  use-chat-stream.ts  use-conversations.ts  use-documents.ts  use-knowledge-bases.ts  use-messages.ts  use-online-status.ts
frontend/lib/: analytics.ts  api-client.test.ts  api-client.ts  api-error.ts  datetime.ts  demo-content.ts  env.ts  token-storage.ts  utils.test.ts  utils.ts
frontend/providers/: auth-provider.tsx  providers.test.tsx  query-provider.tsx  theme-provider.test.tsx  theme-provider.tsx
frontend/services/: auth.service.ts  conversation.service.ts  knowledge-base.service.test.ts  knowledge-base.service.ts
frontend/store/: auth.store.test.ts  auth.store.ts  chat.store.test.ts  chat.store.ts  demo-prompt.store.ts  notification.store.test.ts  notification.store.ts
frontend/test/: setup.ts
frontend/types/: auth.ts  conversation.ts  knowledge-base.ts
monitoring/: README.md  docker-compose.monitoring.yml
monitoring/grafana/: build_dashboards.py
monitoring/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
nginx/: nginx.conf  tls.conf.example  tls.conf.template
(+136 files in other folders)
