[project]
name = "nexusagent"
description = "Multi-tenant AI Agent SaaS platform (backend foundation)"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "redis==5.0.0",
    "structlog==24.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
    "passlib==1.7.4",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "api", "core", "schemas", "repositories", "models", "ai"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
